Fixed vulnerabilties, updated redux manifest

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "enzyme-adapter-react-16": "1.1.1",
     "expect": "23.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "fontgen-loader": "0.2.1",
+    "fontgen-loader": "https://github.com/autodatadirect/fontgen-loader.git",
     "history": "4.7.2",
     "html-webpack-plugin": "3.2.0",
     "i18next": "10.4.1",
@@ -66,7 +66,7 @@
     "redux-form": "7.4.2",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-logger": "3.0.6",
-    "redux-manifest": "1.0.15",
+    "redux-manifest": "1.0.16",
     "redux-saga": "0.16.0",
     "sass-loader": "7.0.3",
     "snazzy": "7.1.1",
